Fixed clipping and made enter send messages

--- a/static/styles.css
+++ b/static/styles.css
@@ -52,6 +52,10 @@ body {
     overflow: hidden;
 }
 
+#chat-room h1 {
+  align-self: center;
+}
+
 #scroll-window {
     flex-grow: 1;
     overflow-y: auto;
@@ -86,6 +90,7 @@ body {
     width: 200px;
     height: 100%;
     overflow-y: auto;
+    z-index: 9999;
 }
 
 #user-list.show {
